updates bio and renders with animation, fixes styling/spacing at specific breakpoints

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ main {
 
 @layer components {
   .bio {
-    @apply flex justify-center py-6 my-2
+    @apply flex justify-center pt-6
   }
 }
 
@@ -70,7 +70,7 @@ main {
 
 @layer components {
   .profile {
-    @apply w-48 h-48 md:w-80 md:h-80 lg:w-96 lg:h-96 rounded-full border-pink-200 border-8 m-6 shadow-lg
+    @apply w-60 h-60 md:w-96 md:h-96 lg:w-[30rem] lg:h-[30rem] rounded-full border-pink-200 border-8 m-6 shadow-lg
   }
 }
 
@@ -123,5 +123,15 @@ main {
 @media (max-width: 767px) {
   .hamburger {
     display: block;
+  }
+}
+
+
+@keyframes blink-caret {
+  0%, 100% {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
   }
 }
